style shop pages / made nice scrollbar / no fix for scroll-spy jet

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11499,6 +11499,35 @@ div.product-detail-content {
   box-shadow: 12px 12px 16px rgba(0, 0, 0, 0.6);
 }
 
+div, product-scroll-center {
+  scroll-snap-align: center;
+}
+
+div.product-detail-content {
+  max-height: 40vh;
+}
+
+div.product-detail-content::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+  background-color: rgba(245, 245, 245, 0.04);
+  box-shadow: whitesmoke;
+  margin: 10px;
+}
+
+div.product-detail-content::-webkit-scrollbar {
+  width: 16px;
+  background-color: transparent;
+  border-color: var(--eatart-color-2);
+}
+
+div.product-detail-content::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px black;
+  background-color: whitesmoke;
+  box-shadow: whitesmoke;
+}
+
 img.img-inlist-product {
   height: 30vh;
   background-color: rgb(245, 245, 245);
@@ -11507,7 +11536,7 @@ img.img-inlist-product {
 
 div.row.product-detail {
   height: 20vh;
-  background-color: rgb(245, 245, 245);
+  background-color: rgba(245, 245, 245, 0.8);
   border: 2px solid black;
 }
 
