--- a/resources/css/app/shop_style.css
+++ b/resources/css/app/shop_style.css
@@ -24,9 +24,6 @@ h3.h3-product-designer {
     font-family: var(--eatart-font-3);
 }
 
-
-
-
 div.product-detail-content {
     height: 40vh;
     overflow-x: hidden;
@@ -36,6 +33,68 @@ div.product-detail-content {
     border-radius: 0px 0px 0px 25px;
     box-shadow: 12px 12px 16px rgba(0, 0, 0, 0.6);
 }
+
+div,product-scroll-center {
+    scroll-snap-align: center;
+}
+
+
+
+
+
+div.product-detail-content {
+    max-height: 40vh;
+}
+
+div.product-detail-content::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+  background-color: rgba(245, 245, 245, 0.04);
+  box-shadow: whitesmoke;
+  margin: 10px;
+}
+
+div.product-detail-content::-webkit-scrollbar
+{
+  width: 16px;
+  background-color: transparent;
+  border-color: var(--eatart-color-2);
+}
+
+div.product-detail-content::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px  black;
+  background-color: whitesmoke;
+  box-shadow: whitesmoke;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 img.img-inlist-product {
     height: 30vh;
